# docs/swagger.yaml
@@ -1,4 +1,11 @@
 definitions:
+  handlers.Campaign:
+    properties:
+      id:
+        type: integer
+      image_url:
+        type: string
+    type: object
   models.MonthlyCategoryGroup:
     properties:
       categories:
@@ -79,6 +86,61 @@ definitions:
 info:
   contact: {}
 paths:
+  /api/campaigns:
+    post:
+      consumes:
+      - multipart/form-data
+      description: Mengunggah campaign dan menjadikannya aktif (hanya 1 yang aktif).
+      parameters:
+      - description: Gambar campaign (jpg/png)
+        in: formData
+        name: image
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Upload campaign baru (dengan gambar)
+      tags:
+      - Campaign
+  /api/campaigns/active:
+    get:
+      description: Mendapatkan campaign yang sedang aktif untuk ditampilkan sebagai
+        popup.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.Campaign'
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Ambil campaign yang aktif saat ini
+      tags:
+      - Campaign
   /api/dashboard:
     get:
       description: Menampilkan ringkasan transaksi
